Fix:project container shadow on small divices

--- a/src/Comp/ProjectsComp/Projects.css
+++ b/src/Comp/ProjectsComp/Projects.css
@@ -136,7 +136,7 @@
     .container {
       width: 80%;
      margin: 50px;
-      box-shadow: 0 8px 16px rgba(255, 255, 255, 0.0);
+     
 
       
         
